<resources>
    <string name="app_name">ASL Dictionary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="favorite_fragment">Favorite Fragment</string>
    <string name="contact_us_fragment">Contact Us Fragment</string>
    <string name="home">About Me</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="create_new_account">Create New Account</string>
    <string name="asl_dictionary">ASL Dictionary</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_instruction_text">Please type your email address:</string>
    <string name="password_instruction">Please create the password:</string>
    <string name="done">Done</string>
    <string name="login_instruction">Please enter your email address and your password to log in.</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_to_nasl_dictionary_app">Welcome to\nASL Dictionary App</string>
    <string name="info_about_app">A Deaf owned ASL dictionary app helps\nto bridge a communication gap between\nthe non ASL user and ASL user communities.\n\nI just started this app recently. I will continue\nto add more words every week.\n\n Feel free to go to reach me\nif you have any feedback, question,\nor concern about ASL Dictionary App.</string>
    <string name="dictionary_search">Dictionary Search</string>
    <string name="search_here">Search here ...</string>
    <string name="favorite_words">Favorite Words</string>
    <string name="contact_us">Contact Us</string>
    <string name="question">What is the subject of the email?</string>
    <string name="submit">Submit</string>
    <string name="client_id">1067832269135-ah7c7qi13mtvg7iejrii7b6l66pus9pi.apps.googleusercontent.com</string>
    <string name="enter_new_word">Enter New Word</string>
    <string name="upload">Upload</string>
    <string name="type_the_description_in_the_box_below_here_about_the_sign">Type the description about the sign\nin the box below here</string>
</resources>