<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/home" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:enabled="true"
        android:title="@string/search" />
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_star"
        android:enabled="true"
        android:title="@string/favorite" />
    <item
        android:id="@+id/contact_us"
        android:icon="@drawable/ic_contact_support"
        android:enabled="true"
        android:title="@string/contact_us" />
<!--    <item-->
<!--        android:id="@+id/create_sign"-->
<!--        android:enabled="true"-->
<!--        android:title="Add Sign" />-->
<!--    <item-->
<!--        android:id="@+id/view_sign"-->
<!--        android:enabled="true"-->
<!--        android:title="View" />-->
</menu>